Security config, squashed bugs (did not auth & did not post to db)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 ### Spring Security ###
-
+spring.security.user.name=user
 spring.security.user.password=123
 
 ### PostgresSQL ###
 spring.main.banner-mode =off
 logging.level.org.springframework =ERROR
-spring.jpa.hibernate.ddl-auto =none
+spring.jpa.hibernate.ddl-auto =update
 spring.datasource.initialization-mode =always
 spring.datasource.platform =postgres
 spring.datasource.url =jdbc:postgresql://localhost:5432/webShopDB
