Finalization of project, Sorted out the controllers, added cart and much more.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,10 @@ spring.datasource.url =jdbc:postgresql://localhost:5432/webShopDB
 spring.datasource.username =postgres
 spring.datasource.password =1337
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation =true
+
+# Thymeleaf configurations
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false  
